--- a/server/package.json
+++ b/server/package.json
@@ -40,6 +40,7 @@
     "socket.io": "2.0.2",
     "socket.io-client": "2.0.2",
     "socketio-jwt": "4.5.0",
+    "uuid": "3.1.0",
     "winston": "2.3.1",
     "ws": "3.0.0"
   }
