--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "bcrypt": "1.0.3",
     "cookie": "0.3.1",
     "ioredis": "3.1.1",
+    "jsondiffpatch": "0.2.4",
     "koa": "2.2.0",
     "koa-bodyparser": "4.2.0",
     "koa-helmet": "3.2.0",
