--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "jsondiffpatch": "0.2.4",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-helmet": "5.1.3",
@@ -11,6 +12,7 @@
     "react-snapshot": "1.1.0",
     "redux": "3.6.0",
     "redux-thunk": "2.2.0",
+    "socket.io": "2.0.3",
     "styled-components": "2.0.0",
     "superagent": "3.5.2"
   },
