--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "babel-polyfill": "6.26.0",
+    "es6-promise": "4.1.1",
+    "isomorphic-fetch": "2.2.1",
     "jsondiffpatch": "0.2.4",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
@@ -11,6 +14,8 @@
     "react-router-dom": "4.1.1",
     "react-snapshot": "1.1.0",
     "redux": "3.6.0",
+    "redux-actions": "2.2.1",
+    "redux-promise": "0.5.3",
     "redux-thunk": "2.2.0",
     "socket.io": "2.0.3",
     "styled-components": "2.0.0",
