--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "babel-preset-react": "6.24.1"
   },
   "dependencies": {
+    "async-busboy": "0.6.2",
     "bcrypt": "1.0.3",
     "cookie": "0.3.1",
     "ioredis": "3.1.1",
