--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "es6-promise": "4.1.1",
     "isomorphic-fetch": "2.2.1",
     "jsondiffpatch": "0.2.4",
+    "lodash": "4.17.4",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-helmet": "5.1.3",
