--- a/server/package.json
+++ b/server/package.json
@@ -35,6 +35,7 @@
     "koa-socket-session": "1.2.0",
     "koa-sslify": "2.1.2",
     "koa-static-cache": "5.0.1",
+    "lodash": "4.17.4",
     "neo4j": "2.0.0-RC2",
     "neo4j-driver": "1.4.0",
     "nodemailer": "4.0.1",
