--- a/server/package.json
+++ b/server/package.json
@@ -20,11 +20,13 @@
     "aws-sdk": "2.156.0",
     "bcrypt": "1.0.3",
     "cookie": "0.3.1",
+    "http-proxy": "1.16.2",
     "ioredis": "3.1.1",
     "jsondiffpatch": "0.2.4",
     "koa": "2.2.0",
     "koa-bodyparser": "4.2.0",
     "koa-helmet": "3.2.0",
+    "koa-mount": "3.0.0",
     "koa-onerror": "3.1.0",
     "koa-passport": "3.0.0",
     "koa-redis": "3.0.0",
@@ -35,10 +37,12 @@
     "koa-socket-passport": "0.0.2",
     "koa-socket-session": "1.2.0",
     "koa-sslify": "2.1.2",
+    "koa-static": "4.0.2",
     "koa-static-cache": "5.0.1",
     "lodash": "4.17.4",
     "neo4j": "2.0.0-RC2",
     "neo4j-driver": "1.4.0",
+    "node-http-proxy": "0.2.3",
     "nodemailer": "4.0.1",
     "passport-local": "1.0.0",
     "react": "15.5.4",
