Update babel conf

--- a/server/.babelrc
+++ b/server/.babelrc
@@ -1,3 +1,4 @@
 {
-    "presets": [["env", {targets:{node:true}}], "react"]
+    "presets": [["env", {targets:{node:true}}], "react"],
+    "plugins": ["transform-object-rest-spread"]
 }
