--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "devDependencies": {
     "babel-cli": "6.24.1",
+    "babel-plugin-transform-es2015-spread": "6.22.0",
     "babel-polyfill": "6.23.0",
     "babel-preset-env": "1.5.1",
     "babel-preset-react": "6.24.1"
@@ -18,6 +19,7 @@
   "dependencies": {
     "async-busboy": "0.6.2",
     "aws-sdk": "2.156.0",
+    "babel-plugin-transform-object-rest-spread": "6.26.0",
     "bcrypt": "1.0.3",
     "cookie": "0.3.1",
     "http-proxy": "1.16.2",
