--- a/client/package.json
+++ b/client/package.json
@@ -5,11 +5,12 @@
   "dependencies": {
     "babel-polyfill": "6.26.0",
     "es6-promise": "4.1.1",
+    "history": "4.7.2",
     "isomorphic-fetch": "2.2.1",
     "jsondiffpatch": "0.2.4",
     "lodash": "4.17.4",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
+    "react": "15.6.2",
+    "react-dom": "15.6.2",
     "react-helmet": "5.1.3",
     "react-redux": "5.0.5",
     "react-router-dom": "4.1.1",
