--- a/server/package.json
+++ b/server/package.json
@@ -29,6 +29,7 @@
     "koa-bodyparser": "4.2.0",
     "koa-helmet": "3.2.0",
     "koa-mount": "3.0.0",
+    "koa-no-cache": "2.0.0",
     "koa-onerror": "3.1.0",
     "koa-passport": "3.0.0",
     "koa-redis": "3.0.0",
