--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -4,7 +4,7 @@
         "node": true
     },
     "extends": [
-        "eslint:recommended",
+        "eslint:all",
         "plugin:import/errors",
         "plugin:import/warnings"
     ],
@@ -14,6 +14,25 @@
         "sourceType": "module"
     },
     "rules": {
+        "no-magic-numbers":0,
+        "padded-blocks":0,
+        "prefer-const":1,
+        "init-declarations":1,
+        "space-before-function-paren":1,
+        "max-len":0,
+        "no-var":2,
+        "sort-imports":2,
+        "arrow-spacing":2,
+        "indent":1,
+        "no-tabs":1,
+        "one-var":0,
+        "no-multiple-empty-lines":1,
+        "no-unused-vars":0,
+        "require-await":0,
+        "key-spacing":1,
+        "quote-props":0,
+        "no-trailing-spaces":1,
+        "arrow-body-style":2,
         "no-console": 0, 
         "linebreak-style": [
             "error",
