--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -14,6 +14,74 @@
         "sourceType": "module"
     },
     "rules": {
+        "no-continue":0,
+        "no-ternary":0,
+        "max-depth":0,
+        "lines-around-comment":0,
+        "no-empty-function":1,
+        "no-implicit-coercion":1,
+        "no-negated-condition":1,
+        "eol-last":2,
+        "no-param-reassign":0,
+        "no-use-before-define":0,
+        "no-throw-literal":0,
+        "no-bitwise":0,
+        "no-process-exit":0,
+        "no-lonely-if":1,
+        "func-names":2,
+        "semi-spacing":2,
+        "new-cap":0,
+        "no-nested-ternary":0,
+        "consistent-return":2,
+        "wrap-regex":1,
+        "template-curly-spacing":1,
+        "no-multi-spaces":1,
+        "capitalized-comments":0,
+        "line-comment-position":0,
+        "no-inline-comments":0,
+        "max-lines":0,
+        "guard-for-in":0,
+        "comma-dangle":2,
+        "no-else-return":1,
+        "no-extra-parens":0,
+        "no-return-await":0,
+        "multiline-comment-style":0,
+        "arrow-parens":1,
+        "callback-return":0,
+        "prefer-destructuring":0,
+        "multiline-ternary":[2,"never"],
+
+        "no-eq-null":2,
+        "eqeqeq":2,
+        "prefer-arrow-callback":1,
+        "prefer-template":1,
+        "no-await-in-loop":0,
+        "id-length":0,
+        "no-sync":0,
+        "camelcase":0,
+        "no-plusplus":0,
+        "func-style":0,
+        "require-jsdoc":0,
+        "max-params":0,
+        "max-statements":0,
+        "no-mixed-operators":0,
+        "block-spacing":1,
+        "max-statements-per-line":1,
+        "brace-style":2,
+        "keyword-spacing":2,
+        "curly":2,
+        "space-before-blocks":2,
+        "global-require":0,
+        "space-infix-ops":2,
+        "object-property-newline":0,
+        "object-curly-newline":0,
+        "array-element-newline":0,
+        "array-bracket-newline":0,
+        "function-paren-newline":1,
+        "sort-keys":0,
+        "comma-spacing":2,
+        "spaced-comment":1,
+        "object-shorthand":2,
         "no-magic-numbers":0,
         "padded-blocks":0,
         "prefer-const":1,
