--- a/server/package.json
+++ b/server/package.json
@@ -46,6 +46,7 @@
     "neo4j": "2.0.0-RC2",
     "neo4j-driver": "1.4.0",
     "node-http-proxy": "0.2.3",
+    "node-schedule": "1.3.0",
     "nodemailer": "4.0.1",
     "passport-local": "1.0.0",
     "react": "15.5.4",
