--- a/server/package.json
+++ b/server/package.json
@@ -5,22 +5,28 @@
   "main": "index.js",
   "scripts": {
     "production": "node babel/index.js",
+    "build": "./node_modules/.bin/babel . -d babel",
     "start": "babel-node index.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "babel-cli": "6.24.1",
     "babel-plugin-transform-es2015-spread": "6.22.0",
-    "babel-polyfill": "6.23.0",
-    "babel-preset-env": "1.5.1",
+    "babel-polyfill": "6.26.0",
+    "babel-preset-env": "1.6.1",
     "babel-preset-react": "6.24.1"
   },
   "dependencies": {
     "async-busboy": "0.6.2",
     "aws-sdk": "2.156.0",
+    "babel-cli": "6.26.0",
     "babel-plugin-transform-object-rest-spread": "6.26.0",
-    "bcrypt": "1.0.3",
+    "babel-plugin-transform-runtime": "6.23.0",
+    "babel-preset-es2015": "6.24.1",
+    "babel-preset-stage-3": "6.24.1",
+    "babel-register": "6.26.0",
+    "babel-runtime": "6.26.0",
+    "bcrypt": "2.0.0",
     "cookie": "0.3.1",
     "http-proxy": "1.16.2",
     "ioredis": "3.1.1",
@@ -41,10 +47,10 @@
     "koa-socket-session": "1.2.0",
     "koa-sslify": "2.1.2",
     "koa-static": "4.0.2",
-    "koa-static-cache": "5.0.1",
+    "koa-static-cache": "5.1.2",
     "lodash": "4.17.4",
     "neo4j": "2.0.0-RC2",
-    "neo4j-driver": "1.4.0",
+    "neo4j-driver": "1.5.3",
     "node-http-proxy": "0.2.3",
     "node-schedule": "1.3.0",
     "nodemailer": "4.0.1",
@@ -55,8 +61,8 @@
     "socket.io": "2.0.2",
     "socket.io-client": "2.0.2",
     "socketio-jwt": "4.5.0",
+    "transform-runtime": "0.0.0",
     "uuid": "3.1.0",
-    "winston": "2.3.1",
     "ws": "3.0.0"
   }
 }
