--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,7 @@
     "babel-runtime": "6.26.0",
     "bcrypt": "2.0.0",
     "cookie": "0.3.1",
+    "hoek": "5.0.3",
     "http-proxy": "1.16.2",
     "ioredis": "3.1.1",
     "jsondiffpatch": "0.2.4",
