--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "babel-polyfill": "6.26.0",
     "es6-promise": "4.1.1",
     "history": "4.7.2",
+    "hoek": "5.0.3",
     "isomorphic-fetch": "2.2.1",
     "jsondiffpatch": "0.2.4",
     "lodash": "4.17.4",
