--- a/client/package.json
+++ b/client/package.json
@@ -4,24 +4,27 @@
   "private": true,
   "dependencies": {
     "babel-polyfill": "6.26.0",
+    "connected-react-router": "6.0.0",
     "es6-promise": "4.1.1",
     "history": "4.7.2",
     "hoek": "5.0.3",
     "isomorphic-fetch": "2.2.1",
     "jsondiffpatch": "0.2.4",
-    "lodash": "4.17.4",
-    "react": "15.6.2",
-    "react-dom": "15.6.2",
+    "lodash": "4.17.11",
+    "react": "16.7.0",
+    "react-dom": "16.7.0",
     "react-helmet": "5.1.3",
-    "react-redux": "5.0.5",
-    "react-router-dom": "4.1.1",
-    "react-snapshot": "1.1.0",
+    "react-redux": "6.0.0",
+    "react-router": "4.3.1",
+    "react-router-dom": "4.3.1",
+    "react-snapshot": "1.3.0",
+    "reduce-reducers": "0.4.3",
     "redux": "3.6.0",
     "redux-actions": "2.2.1",
     "redux-promise": "0.5.3",
     "redux-thunk": "2.2.0",
-    "socket.io": "2.0.3",
-    "styled-components": "2.0.0",
+    "socket.io": "2.2.0",
+    "styled-components": "2.4.1",
     "superagent": "3.5.2"
   },
   "devDependencies": {
