--- a/client/package.json
+++ b/client/package.json
@@ -24,15 +24,21 @@
     "redux-thunk": "2.2.0",
     "socket.io": "2.2.0",
     "styled-components": "2.4.1",
-    "superagent": "3.5.2"
+    "superagent": "4.1.0"
   },
   "devDependencies": {
-    "react-scripts": "1.0.7"
+    "react-scripts": "2.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
